fix: improve visibility of list subtitles

--- a/styles/animations.css
+++ b/styles/animations.css
@@ -1,19 +1,22 @@
 .shine {
-  -webkit-mask-image: linear-gradient(
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+  background-image: linear-gradient(
     -75deg,
-    rgba(0, 0, 0, 0.7) 30%,
-    #000 50%,
-    rgba(0, 0, 0, 0.7) 70%
+    rgba(237, 53, 185, 1) 40%,
+    rgb(254, 202, 255) 50%,
+    rgba(237, 53, 185, 1) 60%
   );
-  -webkit-mask-size: 200%;
-  animation: shine 3s linear infinite;
+  animation: shine 4s linear infinite;
+  background-size: 300% 300%;
 }
 
 @keyframes shine {
   from {
-    -webkit-mask-position: 150%;
+    background-position: 150% 0%;
   }
   to {
-    -webkit-mask-position: -50%;
+    background-position: -50% 0%;
   }
 }
